--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.4.7",
+    "express": "3.0.x",
+    "npm": "1.1.x"
     "jade": "*"
   }
 }
